--- a/style.css
+++ b/style.css
@@ -1,12 +1,24 @@
 body {
-  background-color: lightblue;
+  background-color: rgb(0, 0, 0);
 }
 
 h1 {
-  color: navy;
+  color: rgb(255, 255, 255);
   margin-left: 20px;
+  font-family: "Courier New", Courier, monospace;
 }
 
+h3 {
+    color: rgb(255, 255, 255);
+    font-family: "Courier New", Courier, monospace;
+}
+   
 .p {
-    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255);
+    font-family: "Courier New", Courier, monospace;
+}
+
+#toby1 {
+    width: 200px;
+    height: 200px;
 }
