--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h3 {
     font-family: "Courier New", Courier, monospace;
 }
    
-.p {
+p {
     color: rgb(255, 255, 255);
     font-family: "Courier New", Courier, monospace;
 }
@@ -22,3 +22,4 @@ h3 {
     width: 200px;
     height: 200px;
 }
+
