--- a/style.css
+++ b/style.css
@@ -21,9 +21,14 @@ p {
 }
 
 #toby1 {
-    width: 200px;
-    height: 700px;
+    width: 300px;
+    height: 600px;
+    float: left;              
+    margin-right: 20px;       
+    margin-bottom: 10px;
+    border-radius: 10px;      
 }
+
 
 
 
